Added Information Hiding structure, User experience conditions